--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -54,7 +54,7 @@ font-7 = "Font Awesome 5 Free:pixelsize=10:style=Regular"
 enable-ipc = true
 
 ; modules-left = i3
-modules-left = bspwm
+modules-left = bspwm xwindow
 wm-restack = bspwm
 
 modules-center =
@@ -78,7 +78,7 @@ cursor-scroll = ns-resize
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:75:...%
+label = %title:0:65:...%
 
 [module/xkeyboard]
 type = internal/xkeyboard
