Do not set cursor color in kitty.conf

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,7 +13,7 @@ disable_ligatures cursor
 url_style single
 
 # Cursor color
-cursor #FFFFFF
+# cursor #FFFFFF
 
 # Time waited till mouse is hidden after started typing (-1 == Imediattely | 0 == Disable)
 mouse_hide_wait -1
