--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -54,7 +54,7 @@ font-7 = "Font Awesome 5 Free:pixelsize=10:style=Regular"
 enable-ipc = true
 
 ; modules-left = i3
-modules-left = bspwm xwindow
+modules-left = bspwm
 wm-restack = bspwm
 
 modules-center =
