--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,15 @@
-# No delay for escape key press (not needed if there is no esc keybindings)
+# Disable timeout for escape key
 set -sg escape-time 0
 
-# Automatically set window title
+# Do not exit tmux after exiting last shell, instead, try to go to another tmux session
+set-option -g detach-on-destroy off
+
+# Automatically set window names
 set-window-option -g automatic-rename on
+
 set-option -g set-titles on
 
-# Start window indexing at one
+# Index windows using base 1
 set -g base-index 1
 
 # Like base-index, but for pane numbers
@@ -20,10 +24,10 @@ set -g focus-events on
 # Mouse support
 setw -g mouse on
 
-# remap prefix from 'C-b' to 'Alt-.'
+# Bind prefix from 'C-b' to 'Alt-.'
 unbind C-b # Disable C-b
-set -g prefix M-. # Map prefix to M-.
-bind-key C-b send-prefix # Pressing M-. and then C-b, the prefix will be sent to the current program running
+set -g prefix M-. # Bind prefix to M-.
+bind-key M-. send-prefix # Pressing M-. will send prefix to shell
 
 # Renumber windows when one is closed [on | off]
 set-option -g renumber-windows on
@@ -34,105 +38,115 @@ set -g status on
 # Justify window list to the center [left | centre | right]
 set -g status-justify "left"
 
-# Use vi key bindings in the status line [vi | emacs]
-set -g status-keys vi
+# Use vi key bindings on the status line [vi | emacs]
+set -g status-keys "vi"
 
 # Delay time to select a specific pane when using prefix+q
 # Press Esc to cancel
 set -g display-panes-time 4000
 
-# Show tmux messages for 4 seconds
+# Timeout for tmux messages
 set -g display-time 4000
 
-# Display neovim/vim colors properly {{{
-# from: https://github.com/neovim/neovim/issues/7764
+# Display neovim/vim colors properly
+# https://github.com/neovim/neovim/issues/7764
 # NOTE: without the -a flag in 'terminal-overrides' tmux may not allow
 # different cursor shapes in the terminal, see:
 # https://github.com/neovim/neovim/issues/5096#issuecomment-234305959
 set -ga terminal-overrides ',xterm-256color:Tc'
-set -g default-terminal "tmux-256color"
+set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ',xterm*:sitm=\E[3m'
-# # }}}
 
 # Use Alt+s+vim-keys or Alt+s+Alt+vim-keys to split panes.
 # "-c '#{pane_current_path}'" Makes it so the new pane will start shell in the
 # same directory as the previous selected pane.
-bind -T splitBindings h   split-window -hb -c '#{pane_current_path}'
-bind -T splitBindings j   split-window -v  -c '#{pane_current_path}'
-bind -T splitBindings k   split-window -vb -c '#{pane_current_path}'
-bind -T splitBindings l   split-window -h  -c '#{pane_current_path}'
-bind -T splitBindings M-h split-window -hb -c '#{pane_current_path}'
-bind -T splitBindings M-j split-window -v  -c '#{pane_current_path}'
-bind -T splitBindings M-k split-window -vb -c '#{pane_current_path}'
-bind -T splitBindings M-l split-window -h  -c '#{pane_current_path}'
-bind -n M-s switch-client -T splitBindings
+bind M-s switch-client -T splitBindings
+bind -T splitBindings h   split-window -hb -c "#{pane_current_path}"
+bind -T splitBindings j   split-window -v  -c "#{pane_current_path}"
+bind -T splitBindings k   split-window -vb -c "#{pane_current_path}"
+bind -T splitBindings l   split-window -h  -c "#{pane_current_path}"
+bind -T splitBindings M-h split-window -hb -c "#{pane_current_path}"
+bind -T splitBindings M-j split-window -v  -c "#{pane_current_path}"
+bind -T splitBindings M-k split-window -vb -c "#{pane_current_path}"
+bind -T splitBindings M-l split-window -h  -c "#{pane_current_path}"
 
+# Join a pane from another window to the current window
+bind -T splitBindings H   choose-window "join-pane -hb -s "%%""
+bind -T splitBindings J   choose-window "join-pane -v -s "%%""
+bind -T splitBindings K   choose-window "join-pane -vb -s "%%""
+bind -T splitBindings L   choose-window "join-pane -h -s "%%""
+bind -T splitBindings M-H choose-window "join-pane -hb -s "%%""
+bind -T splitBindings M-J choose-window "join-pane -v -s "%%""
+bind -T splitBindings M-K choose-window "join-pane -vb -s "%%""
+bind -T splitBindings M-L choose-window "join-pane -h -s "%%""
+
+# New window opens shell in the same directory as the current shell
 bind c new-window -c "#{pane_current_path}"
 
 # Toggle zoom
-bind -n M-f resize-pane -Z
+bind M-f resize-pane -Z
 
-# Toggle status line
-bind-key -n M-F set status
+# Toggle status
+bind-key M-F set status
 
-# Alt+c to quickly create a new window
-bind -n M-c new-window
+# Toggle synchronize-panes
+bind-key M-Enter set-window-option synchronize-panes\; display-message "synchronize-panes #{?pane_synchronized,on,off}"
+bind-key Enter set-window-option synchronize-panes\; display-message "synchronize-panes #{?pane_synchronized,on,off}"
 
-# Toggle syncronize-panes
-bind-key M-Enter set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
-bind-key Enter set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
+bind -r k select-pane -U
+bind -r l select-pane -R
+bind -r h select-pane -L
+bind -r j select-pane -D
 
-# Use Alt + vim-keys without prefix to switch panes
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+bind M-k select-pane -U
+bind M-l select-pane -R
+bind M-h select-pane -L
+bind M-j select-pane -D
 
-# Resize panes with prefix + vim-keys
-bind-key -r j resize-pane -D 1
-bind-key -r k resize-pane -U 1
-bind-key -r h resize-pane -L 1
-bind-key -r l resize-pane -R 1
+bind -r H swap-pane -s "{left-of}"
+bind -r J swap-pane -s "{down-of}"
+bind -r K swap-pane -s "{up-of}"
+bind -r L swap-pane -s "{right-of}"
 
-# Join a pane to the current window
-bind-key H choose-window "join-pane -hb -s "%%""
-bind-key J choose-window "join-pane -v -s "%%""
-bind-key K choose-window "join-pane -vb -s "%%""
-bind-key L choose-window "join-pane -h -s "%%""
+# Resize panes
+bind-key -r M-J resize-pane -D 1
+bind-key -r M-K resize-pane -U 1
+bind-key -r M-H resize-pane -L 1
+bind-key -r M-L resize-pane -R 1
 
-# Move windows
-bind-key -n M-[ swap-window -d -t :-
-bind-key -n M-] swap-window -d -t :+
+# Create sessions
+bind -n M-C run-shell $HOME/.tmux/plugins/tmux-sessionist/scripts/new_session_prompt.sh
+
+# Switch sessions
+bind -n M-[ switch-client -p
+bind -n M-] switch-client -n
+
+# Swap windows
+bind-key -r > swap-window -d -t :+
+bind-key -r < swap-window -d -t :-
 
 # Alt + p and Alt + n to switch windows
 bind -n M-p previous-window\; refresh-client -S
 bind -n M-n next-window\; refresh-client -S
 
-# Fast toggle between current and last-used window
-bind-key M-. last-window
-
 # vi keybindings in copy-mode
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 # Copy to clipboard pressing y
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
-# Use Prefix + Alt + vim-keys to move pane
-bind -r M-h swap-pane -s '{left-of}'
-bind -r M-j swap-pane -s '{down-of}'
-bind -r M-k swap-pane -s '{up-of}'
-bind -r M-l swap-pane -s '{right-of}'
+bind BSpace source-file ~/.tmux.conf
 
 # Theme
-source-file ~/.config/tmux/base16.sh
+source-file $HOME/.config/tmux/theme.sh
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin "tmux-plugins/tmux-prefix-highlight"
+set -g @plugin "tmux-plugins/tmux-sessionist"
 
-set -g @prefix_highlight_prefix_prompt 'Prefix'
-set -g @prefix_highlight_copy_prompt   'Copy'
-set -g @prefix_highlight_sync_prompt   'Sync'
+set -g @prefix_highlight_prefix_prompt "Prefix"
+set -g @prefix_highlight_copy_prompt   "Copy"
+set -g @prefix_highlight_sync_prompt   "Sync"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run "~/.tmux/plugins/tpm/tpm"
