--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,7 +10,13 @@ symbol_map U+EA60-U+EBBC codicon
 
 font_size 14.0
 
-# No bell
+# Use value of $BROWSER to open URLs
+open_url_with $BROWSER
+
+# Set the active window to the window under the mouse when moving the mouse around
+focus_follows_mouse yes
+
+# No bells
 enable_audio_bell no
 
 # Deactivate ligatures when cursor is on it
@@ -37,6 +43,13 @@ tab_bar_edge top
 # Enable dynamically change background opacity
 dynamic_background_opacity yes
 
+kitty_mod ctrl+shift
+
+# Next tab
+map kitty_mod+n next_tab
+# Previous tab
+map kitty_mod+p previous_tab
+
 # Ctrl+shift+( / Ctrl+shift+) Change background opacity by 10%
 map ctrl+shift+0 set_background_opacity +0.1
 map ctrl+shift+9 set_background_opacity -0.1
@@ -45,4 +58,8 @@ map ctrl+shift+9 set_background_opacity -0.1
 map ctrl+equal change_font_size all +1.0
 map ctrl+minus change_font_size all -1.0
 
+# Theme
 include ./dracula.conf
+
+active_border_color #7199FF
+inactive_border_color #30302f
