Updates; Moved to AwesomeWM

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,14 +48,23 @@ set -g display-panes-time 4000
 # Timeout for tmux messages
 set -g display-time 4000
 
-# Display neovim/vim colors properly
-# https://github.com/neovim/neovim/issues/7764
-# NOTE: without the -a flag in 'terminal-overrides' tmux may not allow
-# different cursor shapes in the terminal, see:
-# https://github.com/neovim/neovim/issues/5096#issuecomment-234305959
-set -ga terminal-overrides ',xterm-256color:Tc'
-set -g default-terminal 'tmux-256color'
-set -as terminal-overrides ',xterm*:sitm=\E[3m'
+# # Display neovim/vim colors properly
+# # https://github.com/neovim/neovim/issues/7764
+# # NOTE: without the -a flag in 'terminal-overrides' tmux may not allow
+# # different cursor shapes in the terminal, see:
+# # https://github.com/neovim/neovim/issues/5096#issuecomment-234305959
+# set -ga terminal-overrides ',xterm-256color:Tc'
+# # set -g default-terminal 'tmux-256color'
+# set -g default-terminal 'xterm'
+# set -as terminal-overrides ',xterm*:sitm=\E[3m'
+
+# This seems to be better than the above (commented) snippet, as it looks like
+# with this one we have the same effects except that this makes undercurl work
+# properly as well
+# https://github.com/folke/lsp-colors.nvim#making-undercurls-work-properly-in-tmux
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 # Use Alt+s+vim-keys or Alt+s+Alt+vim-keys to split panes.
 # "-c '#{pane_current_path}'" Makes it so the new pane will start shell in the
@@ -117,17 +126,23 @@ bind-key -r M-L resize-pane -R 1
 # Create sessions
 bind -n M-C run-shell $HOME/.tmux/plugins/tmux-sessionist/scripts/new_session_prompt.sh
 
+# # Switch sessions
+# bind-key -n M-[ switch-client -p
+# bind-key -n M-] switch-client -n
+
 # Switch sessions
-bind -n M-[ switch-client -p
-bind -n M-] switch-client -n
+bind-key M-[ switch-client -p
+bind-key M-] switch-client -n
 
 # Swap windows
 bind-key -r > swap-window -d -t :+
 bind-key -r < swap-window -d -t :-
+bind-key -r M-> swap-window -d -t :+
+bind-key -r M-< swap-window -d -t :-
 
 # Alt + p and Alt + n to switch windows
-bind -n M-p previous-window\; refresh-client -S
-bind -n M-n next-window\; refresh-client -S
+bind M-p previous-window\; refresh-client -S
+bind M-n next-window\; refresh-client -S
 
 # vi keybindings in copy-mode
 set-window-option -g mode-keys vi
