--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,11 @@
 .config/alacritty/*
 !.config/alacritty/alacritty.yml
 
+# AwesomeWM
+!.config/awesome/
+!.config/awesome/*
+.config/awesome/*/
+
 !.config/zsh/
 .config/zsh/*
 !.config/zsh/zsh-keybindings
